tests/baselines/reference/privacyCheckExternalModuleExportAssignmentOfGenericClass.errors.txt
tests/cases/compiler/privacyCheckExternalModuleExportAssignmentOfGenericClass_0.ts(1,1): error TS2449: Class 'Foo' used before its declaration.
tests/cases/compiler/privacyCheckExternalModuleExportAssignmentOfGenericClass_0.ts(1,10): error TS2449: Class 'Foo' used before its declaration.


==== tests/cases/compiler/privacyCheckExternalModuleExportAssignmentOfGenericClass_1.ts (0 errors) ====
    import Foo = require("./privacyCheckExternalModuleExportAssignmentOfGenericClass_0");
    export = Bar;
    interface Bar {
        foo: Foo<number>;
    }
==== tests/cases/compiler/privacyCheckExternalModuleExportAssignmentOfGenericClass_0.ts (2 errors) ====
    export = Foo;
    ~~~~~~~~~~~~~
!!! error TS2449: Class 'Foo' used before its declaration.
             ~~~
!!! error TS2449: Class 'Foo' used before its declaration.
    class Foo<A> {
        constructor(public a: A) { }
    }
    